k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcg-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcg-backend
  template:
    metadata:
      labels:
        app: tcg-backend
    spec:
      containers:
      - name: backend-container
        image: abdillah11/tcg-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP # Sesuai instruksi (Akses hanya via Ingress)
  selector:
    app: tcg-backend
  ports:
  - port: 5000
    targetPort: 5000
