k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  # ClusterIP adalah default, artinya hanya bisa diakses dari dalam kluster
  type: ClusterIP 
  selector:
    app: tcg-backend
  ports:
    - protocol: TCP
      port: 5000       # Port yang diakses oleh Ingress
      targetPort: 5000 # Port yang dibuka di dalam Container Python/Flask
