k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcg-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcg-frontend
  template:
    metadata:
      labels:
        app: tcg-frontend
    spec:
      containers:
      - name: frontend-container
        # Ganti dengan nama image yang Anda push ke Docker Hub melalui Jenkins
        image: abdillah11/tcg-frontend:latest 
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # Sesuai poin 2 tugas Anda: tipe Service ClusterIP agar hanya bisa diakses via Ingress
  type: ClusterIP 
  selector:
    app: tcg-frontend
  ports:
  - port: 80
    targetPort: 80
