k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tcg-frontend
  ports:
    - protocol: TCP
      port: 80         # Port yang diakses oleh Ingress
      targetPort: 80   # Port yang dijalankan oleh Web Server (Nginx/Apache)
